After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771229 - Security indicator broken in application mode
Security indicator broken in application mode
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Interface
git master
Other Linux
: Normal minor
: ---
Assigned To: Michael Catanzaro
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-11 04:30 UTC by Michael Catanzaro
Modified: 2016-09-17 04:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
title-box: Fix clicking on security indicator (5.99 KB, patch)
2016-09-17 03:40 UTC, Michael Catanzaro
committed Details | Review
title-box: Fixup for previous commit (719 bytes, patch)
2016-09-17 03:42 UTC, Michael Catanzaro
committed Details | Review
title-box: Another fixup for the previous commit (763 bytes, patch)
2016-09-17 04:24 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2016-09-11 04:30:07 UTC
In gutting EphyTitleBox, I broke the security indicator in web app mode. It no longer displays the security popover when clicked. Turns out ephy_title_box_button_press_event is never called, even though I retained the call to gtk_widget_add_events in ephy_title_box_constructed. Some more debugging required.
Comment 1 Michael Catanzaro 2016-09-17 02:44:08 UTC
It's because EphyTitleBox no longer has a GdkWindow; it can't receive events.
Comment 2 Michael Catanzaro 2016-09-17 03:40:13 UTC
The following fix has been pushed:
40ae894 title-box: Fix clicking on security indicator
Comment 3 Michael Catanzaro 2016-09-17 03:40:16 UTC
Created attachment 335745 [details] [review]
title-box: Fix clicking on security indicator

It doesn't work because EphyTitleBox is now a GtkBox instead of a
GtkStack, so it no longer has a GdkWindow and cannot receive events
anymore. We need to use a GtkEventBox. The simplest solution is to pack
just the GtkImage into the event box, but I had trouble positioning the
popover properly with that strategy. Next easiest solution is to turn
the EphyTitleBox itself into a GtkEventBox. This works nicely.
Comment 4 Michael Catanzaro 2016-09-17 03:42:27 UTC
The following fix has been pushed:
f0ae95e title-box: Fixup for previous commit
Comment 5 Michael Catanzaro 2016-09-17 03:42:30 UTC
Created attachment 335746 [details] [review]
title-box: Fixup for previous commit

Introduced an unused variable
Comment 6 Michael Catanzaro 2016-09-17 04:24:42 UTC
The following fix has been pushed:
3fd2f7a title-box: Another fixup for the previous commit
Comment 7 Michael Catanzaro 2016-09-17 04:24:45 UTC
Created attachment 335749 [details] [review]
title-box: Another fixup for the previous commit

The parent_instance type is wrong... how did it possibly work?